# dbee

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
src/dbee/: __init__.py  _version.py  cli.py
tests/: test_simple.py  utils.py
